# hyperchess

./: .dockerignore  .gitlab-ci.yml  CONTRIBUTIONS.md  Cargo.toml  Config.toml  Dockerfile  Dockerfile.gateway  Dockerfile.worker  Makefile  README.md  api_test_driver.py  docker-compose.yml  hchess.md  hpc.md  httt.md
client/: Dockerfile  package-lock.json  vite.config.ts
client/src/: App.css  App.tsx  Game.css  Game.tsx  Home.tsx  api.ts  main.tsx
deploy/k8s/: httproute.yaml  namespace.yaml
deploy/k8s/client/: deployment.yaml  httproute.yaml
deploy/k8s/redis/: deployment.yaml
deploy/k8s/server/: deployment.yaml  httproute.yaml
deploy/k8s/worker/: deployment.yaml
proto/: search.proto
src/: config.rs  lib.rs  main.rs
src/api/: handlers.rs  mod.rs  models.rs  redis_store.rs  routes.rs  state.rs
src/api/handlers/: bot.rs  game.rs
src/application/: game_service.rs
src/domain/: board.rs  coordinate.rs  game.rs  mod.rs  models.rs  rules.rs  services.rs  zobrist.rs
src/domain/board/: bitboard.rs  bitboard_large.rs  board_representation.rs  cache.rs  entity.rs  fen.rs  geometry.rs  mod.rs  pieces.rs  position.rs  san.rs  u64_board.rs
src/domain/rules/: attacks.rs  calculators.rs  mobility.rs  mod.rs  move_gen.rs
src/infrastructure/: ai.rs  console.rs  display.rs  mechanics.rs  mod.rs  persistence.rs  symmetries.rs  time.rs  zobrist.rs
src/infrastructure/ai/: eval.rs  mcts.rs  mcts_bot.rs  minimax.rs  mod.rs  search_core.rs  see.rs  transposition.rs
src/infrastructure/distributed/: coordinator.rs  discovery.rs  mod.rs  worker.rs
src/interface/: console.rs
tests/: basic_chess.rs  blunder_regression.rs  castling_general.rs  debug_mask.rs  display_test.rs  display_verification.rs  distributed.rs  initial_state.rs  integration_mcts_minimax.rs  mcts_test.rs  minimax_behavior.rs  minimax_optimality.rs  movement_2d.rs  movement_3d.rs  movement_5d.rs  pawn_promotion_rule.rs  puzzle_bk.rs  puzzle_eret.rs  puzzle_wac.rs  special_moves.rs  super_pawn.rs  u64_board_test.rs  vs_stockfish.rs
tests/data/: bk.epd
tests/epd_common/: mod.rs
